_sass/page.scss
/* ... */
/* Large feature header image */
.image-wrap {
	position: relative;
	margin-bottom: 2em;
	@include clearfix;
	&:after {
		content: " ";
		display: block;
		position: absolute;
		bottom: 0;
		left: 8%;
		width: 0;
		height: 0;
		border: 10px solid transparent;
		border-bottom-color: $bodycolor;
		@media #{$small} {
			left: 25%;
		}
		@media #{$large} {
			border-width: 20px;
		}
		@media #{$x-large} {
			left: 33.333333333%;
		}
	}
	img {
		width: 100%;
		height: auto;
		-ms-interpolation-mode: bicubic;
	}
	.headline-wrap {
		position: absolute;
		bottom: 25px;
		@include prefix(12,1);
		@media #{$small} {
			left: 25%;
			margin-left: 0;
		}
		@media #{$x-large} {
			@include prefix(12,1);
		}
		h1, h2 {
			color: $white;
			@include text-shadow(0 1px 2px rgba(0,0,0,.25));
		}
	}
}

/* Post byline */
.byline {
	clear: both;
	font-size: 80%;
}
.article-author-side,
.article-author-bottom {
	h3 {
		margin-bottom: 0;
	}
	p {
		font-size: 80%;
		// font-style: italic;
	}
	a, a:hover {
		border-bottom: 0 solid transparent;
	}
}

/* Default social media links in author sidebar */
.author-social {
  display: block;
  margin-bottom: 5px;
  @include font-rem(14);
  color: $textcolor;
  &:visited {
    color: $textcolor;
  }
  &:hover {
    @include scale(1.1);
  }
  &:active {
    @include translate(0, 2px);
  }
  .fa {
		margin-right: 5px;
	}
}

/* Author sidebar */
.article-author-side {
	display: none;
	.bio-photo {
		max-width: 110px;
		@include rounded(150px);
	}
	@media #{$small} {
		display: block;
		@include grid(12,2);
		@include prefix(12,0.5);
		@include suffix(12,0.5);
		h3,
		p,
		.author-social {
			display: block;
			max-width: 125px;
		}
		h3 {
			margin-top: 10px;
			margin-bottom: 10px;
		}
		p {
			margin-bottom: 20px;
		}
		.author-social {
			margin-bottom: 5px;
		}
	}
	@media #{$large} {
		h3,
		.bio-photo,
		p,
		.author-social {
			max-width: 150px;
		}
	}
	@media #{$x-large} {
		@include grid(12,1.5);
		@include prefix(12,2);
	}
}

/* Author module - mobile only */
.article-author-bottom {
	margin-bottom: 1em;
	@media #{$small} {
		display: none;
	}
	.bio-photo {
		display:none;
		float: left;
		margin-right: 25px;
		max-width: 100px;
		@include rounded(150px);
	}
	.author-social {
		display: inline-block;
		margin-right: 10px;
	}
	.soc {display:inline-block;text-align:center;}
	h3+p {display:none;}
	h3 {display:inline;}
	@media #{$large} {
		h3,
		.bio-photo,
		p,
		.author-social {
			max-width: 150px;
		}
	}
}

/* Post content wrapper */
.article-wrap {
	// Dotted line underlines for links
	p > a,
	li > a {
		text-decoration: underline;
	}
}

/* Table of contents */
.toc {
	font-size: 95%;
	@media #{$large} {
		display: block;
		@include grid(12,2);
		@include prefix(12,0.5);
		@include suffix(12,0.5);
		position: absolute;
		top: 5.5em;
		right: 0;
		background-color: $white;
	}
	header {
		background: darken($textcolor, 10);
		@include opacity(0.9);
	}
	h3 {
		margin: 0;
		padding: 5px 10px;
		color: $white;
		@include font-rem(16);
		text-transform: uppercase;
		&:hover {
			cursor: pointer;
		}
	}
	ul {
		margin: 2px 0 0;
		padding: 0;
		line-height: 1;
	}
	li {
		display: block;
		margin: 0 0 1px 0;
		padding: 0;
		font-family: $heading-font;
		list-style-type: none;
		&:last-child {
			border-bottom-width: 0;
		}
		a {
			padding: 10px;
			display: block;
			color: $white;
			text-decoration: none;
			background: lighten($textcolor, 10);
			@include opacity(0.6);
			@include transition(opacity 0.2s ease-in-out);
			&:hover {
				@include opacity(0.9);
			}
		}
		ul {
			margin: 1px 0 0;
			li a {
				padding-left: 20px;
			}
		}
	}
}

/* TOC trigger for collapsing */
#drawer {
	max-height: 100%;
	overflow: hidden;
	&.js-hidden {
		max-height: 0;
	}
}

/* Image grid - not used */
.image-grid {
	@include clearfix;
	list-style: none;
	margin: 0 0 1em;
	padding: 0;
	li {
		@include grid(12,6);
		@media #{$micro} {
			width: 33.333333%;
		}
		@media #{$small} {
			width: 25%;
		}
		@media #{$medium} {
			width: 20%;
		}
		@media #{$large} {
			width: 16.666666666%;
		}
	}
}

/* Recent grid - not used */
.recent-grid {
	@include clearfix;
	list-style: none;
	margin: 1em 0;
	li {
		display: inline;
		a {
			border-bottom: 0 solid transparent;
			&:hover {
				border-bottom: 0 solid transparent;
			}
		}
	}
	img {
		width: 19%;
		margin-bottom: 1%;
	}
}

/* Social sharing links */
/* Social media brand buttons */
.social-share {
  margin-bottom: 0px + $doc-line-height;
  margin-bottom: 0rem + ($doc-line-height / $doc-font-size);
  ul, li {
  	margin: 0;
  	padding: 0;
  	list-style: none;
  }
  li {
  	display: inline-block;
  }
  $social:
  (facebook, $facebook-color),
  (flickr, $flickr-color),
  (foursquare, $foursquare-color),
  (google-plus, $google-plus-color),
  (instagram, $instagram-color),
  (linkedin, $linkedin-color),
  (pinterest, $pinterest-color),
  (rss, $rss-color),
  (tumblr, $tumblr-color),
  (twitter, $twitter-color),
  (vimeo, $vimeo-color),
  (youtube, $youtube-color);
  @each $socialnetwork, $color in $social {
    .#{$socialnetwork} {
      background: $color;
    }
  }
  a {
	  display: block;
	  padding: 8px 20px;
	  text-decoration: none !important;
	  text-transform: uppercase;
	  @include font-rem(14);
	  font-family: $heading-font;
	  font-weight: 700;
	  color: $white;
	  opacity: 0.8;
	  &:hover {
	    opacity: 1;
	  }
	}
	span {
		display: none;
		@media #{$medium} {
			display: inline;
			padding-left: 5px;
		}
	}
	h4 {
		@include font-rem(14);
		margin-bottom: 10px;
		text-transform: uppercase;
	}
}
/* ... */

